# evaltools

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  taylor-dev.ipynb  taylor.ipynb
.github/workflows/: ci.yaml
evaltools/: __init__.py  download_cmip5-cordex.py  eval.py  fix.py  metrics.py  obs.py  setup.py  source.py  utils.py
evaltools/tests/: test_evaltools.py
