[project]
name = "evaltools"
dynamic = ["version", "dependencies"]

[project.urls]
repository = "https://github.com/euro-cordex/evaltools.git"

[tool.setuptools]
packages = ["evaltools"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest]
python_files = "test_*.py"
testpaths = ["evaltools/tests"]

[build-system]
requires = [
    "setuptools>=42",
    "setuptools-scm>=7",
]
build-backend = "setuptools.build_meta"
